# resident-evil-2-headtracking

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HeadTracking.ini  README.md  THIRD-PARTY-NOTICES.md  launcher-manifest.json  manifest.json  pixi.toml
.github/workflows/: build.yml  release.yml
scripts/: deploy.ps1  detect-game.ps1  install.cmd  package-release.ps1  release-nightly.ps1  release.ps1  run-tests.ps1  uninstall.cmd  update-deps.ps1
src/: plugin_main.cpp
src/camera/: camera_hook.cpp  camera_hook.h  camera_math.cpp  camera_math.h  game_state_detector.cpp  game_state_detector.h  math_types.h  ref_utils.h
src/core/: config.cpp  config.h  constants.h  logger.cpp  logger.h  mod.cpp  mod.h
tests/: camera_math_tests.cpp  config_tests.cpp  test_main.cpp
tools/: ht_state_probe.lua
